--- a/src/index.css
+++ b/src/index.css
@@ -25,4 +25,8 @@
   .text-gradient {
     @apply bg-gradient-to-r text-transparent bg-clip-text from-[#42A6E3] to-[#FF56F6] font-bold font-primary hover:from-[#FF56F6] hover:to-[#42A6E3];
   }
+
+  .gradient-border {
+    @apply bg-gradient-to-r from-red-400 to-purple-400 p-[3px];
+  }
 }
