adding card component of single blog

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
   }
 
   .text-gradient {
-    @apply bg-gradient-to-r text-transparent bg-clip-text from-[#42A6E3] to-[#FF56F6] font-bold font-primary hover:from-[#FF56F6] hover:to-[#42A6E3];
+    @apply bg-gradient-to-r text-transparent bg-clip-text from-red-400 to-purple-400 font-bold hover:from-purple-400 hover:to-red-400;
   }
 
   .gradient-border {
