--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,41 @@
 @tailwind utilities;
 
 @layer components {
-  @import url("https://fonts.googleapis.com/css2?family=Exo+2:wght@300;400;500;600;700&display=swap");
-  @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+  body {
+    font-family: "Exo 2", sans-serif;
+  }
+
+  .blog:last-child {
+    border: none;
+  }
+
+  body::-webkit-scrollbar {
+    width: 0.5em;
+  }
+
+  body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px #000;
+  }
+
+  body::-webkit-scrollbar-thumb {
+    background-color: rgb(15, 27, 65);
+    outline: 1px solid transparent;
+    border-radius: 1rem;
+  }
+  body::-webkit-scrollbar-thumb:hover {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+  }
+
+  .bookmarks::-webkit-scrollbar {
+    width: 0.4em;
+  }
+
+  .bookmarks::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+    border-radius: 1rem;
+  }
 
   @media (hover: none) {
     * {
@@ -15,11 +48,10 @@
 
 @layer base {
   body {
-    @apply font-exo text-[#111111];
+    @apply bg-gray-900 text-gray-100;
   }
-
   .container {
-    @apply max-w-[1400px] mx-auto px-8;
+    @apply max-w-[1400px] mx-auto px-4 md:px-8;
   }
 
   .text-gradient {
